[package]
name = "movie_nights"
version = "0.1.0"
authors = ["nil <nil@kobold.dev>"]
edition = "2021"

publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "movie_nights"

[dependencies]
actix-web = "4"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12"
