[package]
name = "movie_nights"
version = "0.1.0"
authors = ["nil <nil@kobold.dev>"]
edition = "2021"

publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "movie_nights"

[dependencies]
actix-web = "4"
anyhow = "1"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = { version = "0.14", features = ["toml"] }

[dependencies.sqlx]
version = "0.7"
features = ["tls-rustls", "runtime-tokio", "postgres"]

[dev-dependencies]
reqwest = "0.12"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
